Added logic and using DOM created a fully functional Sketch

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <div class="full-body">
         <div class="container">
-            <button class="black">Black</button>
+            <button class="black" onclick="setColor('black')">Black</button>
             <button class="select">Select</button>
-            <button class="random">Random</button>
+            <button class="random" onclick="setColor('random')">Random</button>
             <button class="erasor">Erasor</button>
             <button class="reset">Reset</button>
         </div>
